--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -278,8 +278,8 @@ textarea:focus,textarea:active,textarea:hover{
 
 .user-data {
   position: relative;
-  z-index: 1;
-}
+/*   z-index: 1;
+ */}
 
 .user-data .notMsg{
   margin-left:8px;
@@ -338,8 +338,8 @@ textarea:focus,textarea:active,textarea:hover{
   width: 8px;
   height: 8px;
   position: relative;
-  z-index: 1001;
-  top: 1px;
+/*   z-index: 1001;
+ */  top: 1px;
 }
 .user-setting-data {
   position: absolute;
@@ -399,8 +399,8 @@ textarea:focus,textarea:active,textarea:hover{
 
 .sub-nav-link-wrapper {
   position: absolute;
-  z-index: 999;
-  min-width: 180px;
+/*   z-index: 999;
+ */  min-width: 180px;
   left:0;
   top: 34px;
   background-color:#3B3B3B;
@@ -535,6 +535,10 @@ textarea:focus,textarea:active,textarea:hover{
   padding:0 16px
 }
 
+.filter span{
+  display: block;
+}
+
 .filter span i{
   padding:0 5px;
   font-size: 12px;
@@ -548,9 +552,6 @@ textarea:focus,textarea:active,textarea:hover{
     transition: all 0.2s ease-in-out;
 }
 
-.filter a:hover{
-  border:1px solid darkgray
-}
 /*.data-title-wrapper h4 {
   display: inline-block;
   margin-right: 32px;
@@ -604,9 +605,23 @@ textarea:focus,textarea:active,textarea:hover{
     display: flex;
     justify-content: right;
 }
+
 .search-input {
   position: relative;
 }
+
+.search-input .searchInput {
+  border: none;
+  border-bottom: 1px solid darkgray;
+  padding-left: 0;
+  height: 35px;
+}
+
+.search-input .searchInput::placeholder{
+  font-size: 19px;
+  font-weight: 500;
+}
+
 .search-form input[type="text"] {
   width: 100%;
   background: none;
@@ -621,7 +636,9 @@ textarea:focus,textarea:active,textarea:hover{
 .site-sections-wrapper {
   margin-top: 16px;
   position: relative;
-  z-index: 100;
+/*   z-index: 100;
+ */  min-height: 600px;
+    overflow: auto;
 }
 .left-site-section {
   width: 55%;
@@ -758,8 +775,8 @@ textarea:focus,textarea:active,textarea:hover{
 .box-data-table thead {
   border-top:1px solid #F5F5F5;
   position: relative;
-  z-index: 2;
-  width: 100%;
+/*   z-index: 2;
+ */  width: 100%;
   padding-bottom:8px;
 }
 
@@ -1135,7 +1152,7 @@ tr:nth-child(even) {
     border-collapse: collapse;
     padding: 8px;
     position: relative;
-    z-index: 1;
+    z-index: 999;
     text-align: center;
   }
 }
@@ -1221,6 +1238,10 @@ tr:nth-child(even) {
   background-color: #f1f1f1;
 }
 
+.box-data-table th{
+  cursor: pointer;
+}
+
 .item-action div {
     color: #4167b2;
     border-bottom: 1px solid transparent;
@@ -1244,9 +1265,9 @@ tr:nth-child(even) {
 {
   position: relative;
   z-index: 101;
-  margin-top: 10px;
   font-size: 14.5px;
   padding:16px;
+  padding-bottom: 0;
 }
 
 .save{
@@ -1266,10 +1287,10 @@ tr:nth-child(even) {
   position: relative;
   z-index: 1;
   display: flex;
-}
-
-.action {
-  display: none;
+  width: 141px;
+  max-width: 141px;
+  justify-content: space-between;
+  align-items: baseline;
 }
 
 .d-none {
@@ -1425,16 +1446,16 @@ tr:nth-child(even) {
 
 
  .data-title-search-container {
-  z-index: 101;
-  position: relative;
+/*   z-index: 101;
+ */  position: relative;
 }
 
 .accountingForm .data-title-search-container {
   border-bottom: 1px solid darkgray;
   padding:16px 0 16px 16px;
   background: #fff;
-  z-index: 101;
-  position: relative;
+/*   z-index: 101;
+ */  position: relative;
 }
 .pageName a,.pageName span:last-of-type{
   font-size: 16px;
@@ -1746,8 +1767,8 @@ tr:nth-child(even) {
   background: #fff;
   padding: 8px 0;
   position: relative;
-  z-index: 101;
-}
+/*   z-index: 101;
+ */}
 .chartOfAccounts .donate {
   width: 80%;
   margin: auto;
@@ -1858,8 +1879,8 @@ tr:nth-child(even) {
   left:0;
   width:100%;
   padding-top:6px;
-  z-index: 1;
-  background: #fff;
+/*   z-index: 1;
+ */  background: #fff;
 }
 
 
@@ -2016,8 +2037,8 @@ cursor: pointer;
    padding: 16px;
    margin-bottom: 32px;
    position: relative;
-   z-index: 100;
- }
+/*    z-index: 100;
+ */ }
  .accountTransactions .chooseMath {
    left:0;
  }
@@ -2030,12 +2051,12 @@ cursor: pointer;
  .ACC-T-F .requ{
    width:24.2%;
    position: relative;
-   z-index: 101;
- } 
+/*    z-index: 101;
+ */ } 
 
  .ACC-T-F .requ:first-of-type{
-  z-index: 102;
-}
+/*   z-index: 102;
+ */}
  .chartOfAccountsForm .requ{
    width: 19%;
    margin-right: 8px;
@@ -2068,9 +2089,6 @@ cursor: pointer;
   padding:32px 0 16px;
 }
 
-/* .dateMenu {
-  cursor: pointer;
-} */
 
 .ACC-T-F .dateRangeTol {
   position: absolute;
@@ -2082,8 +2100,8 @@ cursor: pointer;
   border-top:none;
   padding:4px;
   display: none;
-  z-index: 102;
-}
+/*   z-index: 102;
+ */}
 
 
 .ACC-T-F .dateRangeTol li{
@@ -2110,8 +2128,8 @@ cursor: pointer;
 .ACC-T-F .dateRangeTol input{
   position: relative;
   opacity: 0;
-  z-index:1;
-  height:30px;
+/*   z-index:1;
+ */  height:30px;
   margin: 0;
 }
 
@@ -2207,13 +2225,28 @@ cursor: pointer;
 
 .box-data-table-wrapper {
   position: relative;
-  z-index: 100;
-  width: 100%;
-  overflow-x: auto;
-  min-height: 500px;
+/*   z-index: 100;
+ */  width: 100%;
 }
 
-/* Responcive For Mobile */
+.itemTransactionsForm .ACC-T-F .requ{
+  margin-right: 16px;
+}
+.itemTransactionsForm .ACC-T-F .ACC-BTNS {
+  width: auto;
+  padding:0 0 8px 0;
+}
+
+.box-data-table .balanceState {
+  font-size: 22px;
+    text-align: center;
+}
+
+.select2-container--default .select2-selection--single {
+  border:none;
+  border-bottom: 1px solid darkgray;
+}
+/* Responsive For Mobile */
 
 @media(max-width:768px){
   .billInputs .billOpject {
@@ -2393,22 +2426,16 @@ cursor: pointer;
 .dataTables_filter ,.dataTables_info{
   display: none;
 }
-
-.dt-buttons {
-  margin:0 0 16px 16px;
-  position: relative;
-  padding-left: 102px;
+.dataTables_wrapper {
+  padding-top: 32px;
 }
-
-.dt-buttons::before{
-  content: "Export As :";
-  top:0;
-  left:0;
+.dt-buttons {
+  display: flex;
+  flex-direction: column;
   position: absolute;
-  color: #666;
-  line-height:1.9em;
-  height: 100%;
-  font-weight: bold;  
+  top: 0;
+  z-index: 999;
+  left: 59%;
 }
 
 .dt-buttons button{
@@ -2421,4 +2448,23 @@ cursor: pointer;
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
   -o-border-radius: 4px;
+  border: 1px solid transparent;
+  border-bottom: 1px solid #ddd;
+  transition: all 0.4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  -moz-transition: all 0.4s ease-in-out;
+  -ms-transition: all 0.4s ease-in-out;
+  -o-transition: all 0.4s ease-in-out;
+  display: none;
+}
+
+.dt-buttons button:hover{
+  background-color: #fff;
+  border: 1px solid #ddd;
+}
+
+@media (max-width:992px){
+  .dt-buttons {
+    left:2%
+  }
 }
