--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -401,7 +401,7 @@ textarea:focus,textarea:active,textarea:hover{
   position: absolute;
   z-index: 999;
   min-width: 180px;
-  left:0;
+  left:-12px;
   top: 34px;
   background-color:#3B3B3B;
   box-shadow: 0 2px 8px 0 rgba(0,0,0,.15);
@@ -1295,42 +1295,6 @@ tr:nth-child(even) {
   display: none;
 }
 
-.actionMath,.filterMath,.chooseMath{
-  position: absolute;
-  top: 25px;
-  width:130px;
-  border:1px solid darkgray;
-  background:#fff;
-  text-align: left;
-}
-
-.filterMath {
-  left:0;
-}
-
-.chooseMath {
-  left: 80px;
-}
-
-.actionMath {
-  left:0;
-}
-
-
-.actionMath li,.filterMath li,.chooseMath li{
-  padding:8px 16px;
-  cursor: pointer;
-}
-
-.actionMath li:hover,.filterMath li:hover,.chooseMath li:hover{
-  background: #e9e9e9;
-}
-
-.actionMath :last-of-type,.filterMath :last-of-type,.chooseMath li:last-of-type{
-  border:none
-}
-
-
 .bagntion .fas
 {
   display: inline-block;
@@ -1481,8 +1445,9 @@ tr:nth-child(even) {
   padding-bottom:0;
   background: none;
 }
+
 .accountingForm .bagntion{
-  padding: 0;
+  padding: 16px 0;
 }
 
 .chartOfAccountsForm .bagntion{
@@ -2075,11 +2040,12 @@ cursor: pointer;
  .ACC-T-F input,
  .ACC-T-F select,
  .ACC-T-F select option{
-  height: 42px;
+  height: 24px;
   margin-top:4px;
-  padding: 0;
   font-size:1.1em;
   color: #3B3B3B;
+  border: none;
+  border-bottom: 1px solid darkgray;
 }
 
 .ACC-T-F .ACC-BTNS {
@@ -2424,9 +2390,7 @@ cursor: pointer;
 .dataTables_filter ,.dataTables_info{
   display: none;
 }
-.dataTables_wrapper {
-  padding-top: 32px;
-}
+
 .dt-buttons {
   display: flex;
   flex-direction: column;
