--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -544,6 +544,7 @@ textarea:focus,textarea:active,textarea:hover{
 }
 
 .filter a{
+    display: flex;
     color: rgb(102, 102, 102);
     font-weight: bold;
     padding: 0 0 5px;
@@ -2397,31 +2398,36 @@ cursor: pointer;
   top: 0;
   z-index: 9;
   left: 59%;
+  -webkit-box-shadow: 0px 0px 3px 3px rgba(238,238,238,1);
+  -moz-box-shadow: 0px 0px 3px 3px rgba(238,238,238,1);
+  box-shadow: 0px 0px 3px 3px rgba(238,238,238,1);
 }
 
 .dt-buttons button{
   padding:8px 16px;
-  font-size:16px;
-  font-weight: bold;
-  border-radius: 4px;
-  color:#666;
-  -webkit-border-radius: 4px;
+  font-size:14.5px;
+  font-family: "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  text-align: left;
+  font-weight: normal;
+  /*border-radius: 4px;
+  */color:#666;
+  /*-webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
   -o-border-radius: 4px;
-  border: 1px solid transparent;
-  border-bottom: 1px solid #ddd;
-  transition: all 0.4s ease-in-out;
-  -webkit-transition: all 0.4s ease-in-out;
-  -moz-transition: all 0.4s ease-in-out;
-  -ms-transition: all 0.4s ease-in-out;
-  -o-transition: all 0.4s ease-in-out;
+  *//*border: 1px solid transparent;
+  border-bottom: 1px solid #ddd;*/
+  transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
   display: none;
+  background-color: #fff;
 }
 
 .dt-buttons button:hover{
-  background-color: #fff;
-  border: 1px solid #ddd;
+  background-color: #e9ecef;
 }
 
 @media (max-width:992px){
